# PgEngine

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  add.pg  codingstyle.md  ecs.pg  log.txt  logManager.pg  make.bat  nexus.pg  qml.qrc  readme.md  res.qrc  scene.pg  serialize.sz  setupRenderer.pg  sscene.sz  sysRegister.pg  sysThema.pg  test.pg
src/: CMakeLists.txt  Doxyfile  app.cpp  app.h  application.cpp  application.h  camera.cpp  camera.h  configuration.cpp  configuration.h  constant.h  game.cpp  game.h  logger.cpp  logger.h  main.cpp  oldcode.h  serialization.cpp  serialization.h
src/ECS/: entitysystem.cpp  entitysystem.h
src/Editor/Gui/: componenttab.cpp  componenttab.h  contextmenu.cpp  contextmenu.h  entitylist.cpp  entitylist.h  inspector.cpp  inspector.h  optiontab.cpp  optiontab.h  projectmanager.cpp  projectmanager.h
src/Editor/Systems/: optiontab.h
src/Engine/: basesystem.h  camera.cpp  camera.h  configuration.cpp  configuration.h  constant.h  engine.cpp  engine.h  fontloader.cpp  fontloader.h  gl_debug.hpp  logger.cpp  logger.h  map.cpp  map.h  noise.h  parser.cpp  parser.h  particle.cpp  particle.h  pathfinding.h  pgconstant.h  randomnumbergenerator.cpp  randomnumbergenerator.h  renderer.cpp  renderer.h  serialization.cpp  serialization.h  sharedparameters.cpp  sharedparameters.h  stdafx.h  tileloader.cpp  tileloader.h  window.cpp  window.h
src/Engine/2D/: animator2d.h  camera2d.cpp  camera2d.h  collisionsystem.cpp  collisionsystem.h  position.cpp  position.h  simple2dobject.cpp  simple2dobject.h  texture.cpp  texture.h
src/Engine/Audio/: audiomodule.h  audiosystem.cpp  audiosystem.h
src/Engine/ECS/: callable.h  commanddispatcher.cpp  commanddispatcher.h  component.cpp  component.h  componentregistry.cpp  componentregistry.h  ecsmodule.h  entity.cpp  entity.h  entitycreationsystem.h  entitysystem.cpp  entitysystem.h  entitysystem2.cpp  entitysystem2.h  eventdispatcher.h  eventlistener.h  group.cpp  group.h  identifiers.h  loggersystem.h  savemanager.cpp  savemanager.h  sparseset.cpp  sparseset.h  system.cpp  system.h  systemregistry.h  uniqueid.cpp  uniqueid.h
src/Engine/Event/: eventloop.cpp  eventloop.h
src/Engine/Files/: filemanager.cpp  filemanager.h  fileparser.cpp  fileparser.h  parser.cpp  parser.h
src/Engine/Helpers/: detector.h  functionregistry.h  functiontraits.h  helpers.h  openglobject.cpp  openglobject.h
src/Engine/Input/: input.cpp  input.h  inputcomponent.cpp  inputcomponent.h  inputmodule.h  keyconfig.h  oldinputcomponent.cpp  oldinputcomponent.h
src/Engine/Interpreter/: environment.cpp  environment.h  expression.cpp  expression.h  interpreter.cpp  interpreter.h  interpretersystem.cpp  interpretersystem.h  lexer.cpp  lexer.h  logger.cpp  main.cpp  oldInterpreterMain.cpp  parser.cpp  parser.h  pginterpreter.cpp  pginterpreter.h  prettyprinter.h  resolver.cpp  resolver.h  scriptcallable.h  statement.cpp  statement.h  systemfunction.cpp  systemfunction.h  token.h  valuable.cpp  valuable.h
src/Engine/Loaders/: atlasloader.cpp  atlasloader.h  fontloader.cpp  fontloader.h  genericloader.h  tileloader.cpp  tileloader.h
src/Engine/Maths/: geometry.h  pathfinding.h  randomnumbergenerator.cpp  randomnumbergenerator.h
src/Engine/Memory/: elementtype.cpp  elementtype.h  memorypool.h  parallelfor.cpp  parallelfor.h  rwlock.h  sparseset.h  threadpool.h
src/Engine/Networking/: backend_sdl.cpp  backend_sdl.h  common.cpp  common.h  ibackend.h  inetwork_transport.h  network_config.h  network_sys_config.h  network_system.cpp  network_system.h  sdl_backend.cpp  sdl_backend.h
src/Engine/Prefabs/: foldablecard.h
src/Engine/Renderer/: camera.cpp  camera.h  mesh.cpp  mesh.h  meshbuilder.cpp  meshbuilder.h  particle.cpp  particle.h  renderer.cpp  renderer.h  renderermodule.h
src/Engine/Scene/: prefab.h  sceneloader.cpp  sceneloader.h  scenemanager.cpp  scenemanager.h
src/Engine/Standalone/: noise.cpp  pathfinding.h
src/Engine/Systems/: basicsystems.h  coremodule.h  coresystems.cpp  coresystems.h  logmodule.h  oneventcomponent.cpp  oneventcomponent.h  positionmodule.cpp  positionmodule.h  scenemodule.h  sentencemodule.h  shape2Dmodule.h  texture2Dmodule.h  thememodule.h  timemodule.h  tween.h  uimodule.cpp  uimodule.h
src/Engine/UI/: animation.h  button.cpp  button.h  focusable.cpp  focusable.h  listview.cpp  listview.h  namedanchor.cpp  namedanchor.h  prefab.h  progressbar.cpp  progressbar.h  scrollable.cpp  scrollable.h  sentencesystem.cpp  sentencesystem.h  simple2dobject.cpp  simple2dobject.h  sizer.cpp  sizer.h  textinput.cpp  textinput.h  texture.cpp  texture.h  thememanager.cpp  thememanager.h  ttftext.cpp  ttftext.h  uianimation.cpp  uianimation.h  uiconstant.cpp  uiconstant.h  uisystem.cpp  uisystem.h  utils.h
src/GameElements/Gui/: escapepanel.cpp  escapepanel.h  tileselector.cpp  tileselector.h
src/GameElements/Systems/: basicsystems.h  charactere.cpp  charactere.h  gametime.h  incrementalsystems.h  inventory.cpp  inventory.h  keyconfig.h  map.cpp  map.h  namegen.cpp  namegen.h  ressources.h  (+1 more)
src/GameOff/: achievement.cpp  achievement.h  application.cpp  character.cpp  character.h  characterstats.h  characustomizationscene.cpp  characustomizationscene.h  commons.h  customitem.h  customlocation.h  custompassive.h  customskilltree.h  fightscene.cpp  fightscene.h  gamefacts.cpp  gamefacts.h  gamelog.h  gamemodule.h  inventory.cpp  inventory.h  item.cpp  item.h  location.cpp  location.h  locationscene.cpp  locationscene.h  mainscene.cpp  managenerator.cpp  managenerator.h  nexusscene.cpp  nexusscene.h  passives.cpp  passives.h  skilltree.cpp  skilltree.h  spells.cpp  spells.h  theme.cpp  theme.h
src/Input/: input.cpp  input.h  inputcomponent.cpp  inputcomponent.h
src/PixelJam/: application.cpp  config.cpp  config.h  main.cpp
src/Tetris/: app.cpp  app.h  tetris.cpp  tetromino.cpp  tetromino.h
src/UI/: button.cpp  button.h  listview.cpp  listview.h  sentencesystem.cpp  sentencesystem.h  uianimation.cpp  uianimation.h  uiconstant.h  uisystem.cpp  uisystem.h
(+381 files in other folders)
